--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,70 +6,77 @@
 
 <!--As this assigment requires me to build a dynamic UI from the Json file, I'll build it and populate the data through foreach loops.-->
 
-<div class="container text-center">
-    <h1 class="display-4">EnviTech json menu</h1>
+    <div class="container text-center">
+        <h1 class="display-4">EnviTech json menu</h1>
 
-    <div class="container w-100 bg-light border">
-        <!--Display only if selected.-->
-        @if (!(@Model.selectedMonitorType is null))
+        @if (!(@Model.selectedMonitorTypeLegendId is null))
         {
-            <div class="row">
-                <div class="col-6">
-                    <h5>Monitor Type: <span class="text-info">@Model.selectedMonitorType</span></h5>
+            <div class="container w-100 bg-light border">
+                <!--Display only if selected.-->
+                @if (!(@Model.selectedMonitorType is null))
+                {
+                    <div class="row">
+                        <div class="col-6">
+                            <h5>Monitor Type: <span class="text-info">@Model.selectedMonitorType</span></h5>
+                        </div>
+                        <div class="col-6">
+                            <h5>Monitor: <span class="text-info">@Model.selectedMonitor</span></h5>
+                        </div>
+                    </div>
+                }
+
+                <div class="row">
+                    <b>AQI [level]</b>
                 </div>
-                <div class="col-6">
-                    <h5>Monitor: <span class="text-info">@Model.selectedMonitor</span></h5>
-                </div>
+                <!--Build Legend menu.-->
+                @foreach (var legend in Model.jsonData.Legends)
+                {
+                    @foreach (var tags in legend.Tags)
+                    {
+                        @if (legend.Id == @Model.selectedMonitorTypeLegendId) {
+                        <div class="legend pb-2 row pl-2">
+                            <div class="col-1">
+                                <div class="rectangle" style="background:@tags.Color">  </div>
+                            </div>
+                            <div class="col-10 text-left">
+                                @tags.Label
+                            </div>
+
+                        </div>
+                        } 
+                    }
+                }
             </div>
+
         }
 
         <div class="row">
-            <b>AQI [level]</b>
-        </div>
-        <!--Build Legend menu.-->
-        @foreach (var legend in Model.jsonData.Legends)
-        {
-            @foreach (var tags in legend.Tags)
+            <!--Main buttons, At this Json file there are only 3, but could be more.-->
+            @foreach (var monitorType in Model.jsonData.MonitorType)
             {
-                <div class="legend pb-2 row pl-2">
-                    <div class="col-1">
-                        <div class="rectangle" style="background:@tags.Color">  </div>
+                <div class="dropdown p-1 btn-group btn-group-justified col-lg-4 col-md-4 col-sm-12">
+                    <button class="btn-secondary form-control dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        @monitorType.Name
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-left w-100 dropdown" aria-labelledby="dropdownMenuButton">
+                        <!--Each monitor type has different amount of monitors-->
+                        @foreach (var monitor in Model.jsonData.Monitor)
+                        {
+                            if (monitorType.LegentId == monitor.MonitorTypeId)
+                            {
+                                <!--Pass info about the selected monitorType and monitor-->
+                                <form method="post">
+                                    <input type="hidden" asp-for="@monitorType.LegentId" name="monitorTypeLegendId" />
+                                    <input type="hidden" asp-for="@monitorType.Name" name="monitorType" />
+                                    <input type="hidden" asp-for="@monitor.Name" name="monitor" />
+                                    <input type="submit" value="@monitor.Name" class="btn-secondary  form-control dropdown-item">
+                                </form>
+                            }
+                        }
                     </div>
-                    <div class="col-10 text-left">
-                        @tags.Label
-                    </div>
-                    
                 </div>
             }
-        }
-    </div>
+        </div>
 
-    <div class="row">
-        <!--Main buttons, At this Json file there are only 3, but could be more.-->
-        @foreach (var monitorType in Model.jsonData.MonitorType)
-        {
-            <div class="dropdown p-1 btn-group btn-group-justified col-lg-4 col-md-4 col-sm-12">
-                <button class="btn-secondary form-control dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    @monitorType.Name
-                </button>
-                <div class="dropdown-menu dropdown-menu-left w-100 dropdown" aria-labelledby="dropdownMenuButton">
-                    <!--Each monitor type has different amount of monitors-->
-                    @foreach (var monitor in Model.jsonData.Monitor)
-                    {
-                        if (monitorType.LegentId == monitor.MonitorTypeId)
-                        {
-                            <!--Pass info about the selected monitorType and monitor-->
-                            <form method="post">
-                                <input type="hidden" asp-for="@monitorType.Name" name="monitorType" />
-                                <input type="hidden" asp-for="@monitor.Name" name="monitor" />
-                                <input type="submit" value="@monitor.Name" class="btn-secondary  form-control dropdown-item">
-                            </form>
-                        }
-                    }
-                </div>
-            </div>
-        }
     </div>
-
-</div>
 
